--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
       "src": "/api/(.*)",
       "dest": "index.js"
     },
+     {
+      "src": "/addfriends",
+      "dest": "/Frontend"
+    },
     {
       "src": "/(.*)",
       "dest": "/Frontend/$1"
